{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 44,
  "lineage": "ebe14aa1-5225-dd42-8cdd-2ec975f28e28",
  "resources": [
    {
      "module": "module.instancia_rds_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_instancia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:internet-gateway/igw-07f1dca8806feeea0",
            "id": "igw-07f1dca8806feeea0",
            "owner_id": "509130302659",
            "tags": {
              "Name": "ig_proyecto_lucas"
            },
            "tags_all": {
              "Name": "ig_proyecto_lucas",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "vpc_id": "vpc-0a2f699ead309eecd"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-0dec71edd424271e5",
            "id": "rtb-0dec71edd424271e5",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f1dca8806feeea0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_lucas"
            },
            "tags_all": {
              "Name": "route_table_lucas",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2f699ead309eecd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_internet_gateway.internet_gateway_1",
            "module.networking_module.aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0900187d672613d4f",
            "route_table_id": "rtb-0dec71edd424271e5",
            "subnet_id": "subnet-06e27959371594df4"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.internet_gateway_1",
            "module.networking_module.aws_route_table.route_table",
            "module.networking_module.aws_subnet.subnet_1",
            "module.networking_module.aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_instancia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-0d1c04cc453804694",
            "description": "Permite a la instancia ser accedida desde SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1c04cc453804694",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH a Instancia",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_group_instancia",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2f699ead309eecd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-06e60a6b97d329c4b",
            "description": "Permite a la instancia acceder a la BD",
            "egress": [],
            "id": "sg-06e60a6b97d329c4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Desde instancia a RDS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_group_rds",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2f699ead309eecd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-06e27959371594df4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e27959371594df4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_subnet_lucas"
            },
            "tags_all": {
              "Name": "vpc_subnet_lucas",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "vpc_id": "vpc-0a2f699ead309eecd"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-01a8c00df758c6d1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a8c00df758c6d1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_subnet_lucas_2"
            },
            "tags_all": {
              "Name": "vpc_subnet_lucas_2",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "vpc_id": "vpc-0a2f699ead309eecd"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:vpc/vpc-0a2f699ead309eecd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e5763317dc9acb4",
            "default_route_table_id": "rtb-0129c568f339fcacc",
            "default_security_group_id": "sg-0b3ef2d69aa5f6651",
            "dhcp_options_id": "dopt-b99482db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a2f699ead309eecd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0129c568f339fcacc",
            "owner_id": "509130302659",
            "tags": {
              "Name": "vpc_lucas"
            },
            "tags_all": {
              "Name": "vpc_lucas",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            }
          }
        }
      ]
    }
  ]
}